@startuml

namespace al5d_cpp {

    class AL5DBase #eee
    class JointBase #eee

    class AL5DBaseConfig <<(S,Orchid)>> {
		+ AL5DBaseConfig(...)
		+ joint_configs : JointBaseConfigs
		+ posing_config : PosingConfig
		+ serial_config : SerialConfig
		- validate_joint_configs() : void
	}

    class JointBaseConfig <<(S,Orchid)>> {
		+ JointBaseConfig(...)
		+ board_channel : BoardChannel
		+ degree_range : DegreeRange
		+ name : JointName
		+ pulse_width_range : PulseWidthRange
		+ type : JointType
		- validate_board_channel() : void
	}

    class PosingConfig <<(S,Orchid)>> {
		+ PosingConfig(...)
		+ calibrating_pose_name : PoseName
		+ finish_pose_name : PoseName
		+ pose_configs : PoseConfigs
		+ start_pose_name : PoseName
	}

    class PoseConfig <<(S,Orchid)>> {
		+ PoseConfig(...)
		+ joint_name_angles : JointNameAngles
		+ name : PoseName
	}

    class SerialConfig <<(S,Orchid)>> {
		+ SerialConfig(...)
		+ baud_rate : serial::BaudRate
		+ port : serial::Port
	}

    AL5DBase ..> AL5DBaseConfig
    AL5DBaseConfig "1" --> "1" SerialConfig
    JointBase ..> JointBaseConfig
    AL5DBaseConfig "1" -> "6" JointBaseConfig
    PosingConfig "1" <- "1" AL5DBaseConfig
    PoseConfig "*" <- "1" PosingConfig
}

legend right
  <b><color:Orchid>S Struct</color></b>
  <b><color:DarkCyan>C Class</color></b>
endlegend

@enduml
